Fixed recording-indicator from pushing the dropdown menu off-screen

--- a/bigbluebutton-html5/imports/ui/components/nav-bar/recording-indicator/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/nav-bar/recording-indicator/styles.scss
@@ -30,6 +30,9 @@
   overflow: hidden;
   text-overflow: ellipsis;
   vertical-align: middle;
+  @include mq("(max-height:#{upper-bound($small-range)}), #{$small-only}") {
+    max-width: 20vw;
+  }
 }
 
 .recordIndicator {
