--- a/bigbluebutton-html5/imports/ui/components/nav-bar/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/nav-bar/styles.scss
@@ -34,7 +34,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   @include mq("(max-height:#{upper-bound($small-range)}), #{$small-only}") {
-    max-width: 70vw;
+    max-width: 30vw;
   }
   
   > [class^="icon-bbb-"] {
